# CER-Bench

./: .gitignore  DECISIONS.md  MASTER_PLAN.md  README.md  RESULTS_AND_PROCESS.md  SUBMISSION_MEMO.md  croissant.json  pyproject.toml  requirements.txt
configs/: corpus.yaml  evaluation.yaml  generation.yaml  retrieval.yaml
data/benchmark/v1/: dev.jsonl  schema.json  test.jsonl  train.jsonl
data/benchmark/v2/: agent_test.jsonl  dev.jsonl  tasks_v2.jsonl  test.jsonl  train.jsonl
docs/: annotation_guidelines.md  benchmark_spec.md  corpus_card.md  error_taxonomy.md  submission_checklist.md
paper/: neurips_2026.tex  refs.bib
scripts/: 01_collect_metadata.py  02_download_text.py  03_parse_documents.py  04_build_corpus.py  05_build_bm25_index.py  06_build_dense_index.py  07_generate_seed_tasks.py  07b_generate_grounded_tasks.py  07c_batch_generate.py  08_verify_tasks.py  09_make_splits.py  10_run_baselines.py  11_run_agent.py  12_score_retrieval.py  14_make_tables.py  15_make_figures.py  25_generate_training_data.py  30_generate_v2_benchmark.py
src/agent/: abstention.py
src/corpus/: bioc_client.py  clinicaltrials_client.py  openalex_client.py  pubmed_client.py
src/generation/: motif_sampler.py
src/retrieval/: search_api.py
src/utils/: config.py
