[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "synthsearch"
version = "0.1.0"
description = "Metadata-aware self-editing search agent and benchmark for biomedical literature retrieval"
requires-python = ">=3.10,<3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
